--- a/customer_segmentation/notebooks/01_eda.ipynb
+++ b/customer_segmentation/notebooks/01_eda.ipynb
@@ -364,7 +364,7 @@
    ],
    "source": [
     "# Bivariate & Multivariate Analysis\n",
-    "sns.pairplot(rfm[['Recency', 'Frequency','Monetary']])\n"
+    "sns.pairplot(rfm[['Recency', 'Frequency','Monetary']])"
    ]
   },
   {
