--- a/customer_segmentation/notebooks/02_modeling.ipynb
+++ b/customer_segmentation/notebooks/02_modeling.ipynb
@@ -414,6 +414,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "514662f3-37e1-44eb-942f-fa2164ba2e0d",
+   "metadata": {},
+   "source": [
+    "### Choosing the Optimal `eps` for DBSCAN\n",
+    "\n",
+    "To apply DBSCAN effectively, we need to determine the ideal `eps` (epsilon) value, which defines the maximum distance between two samples for one to be considered as in the neighborhood of the other.\n",
+    "\n",
+    "We use the **k-distance plot** method by:\n",
+    "- Calculating the distance to each point’s *k-th nearest neighbor* (typically `k = min_samples - 1`)\n",
+    "- Sorting these distances and plotting them\n",
+    "- Looking for the **“elbow point”** where the curve sharply changes, indicating a good threshold for density separation\n",
+    "\n",
+    "This method helps select an `eps` value that balances cluster detection with noise sensitivity.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 90,
    "id": "d7b8b01f-019b-4823-b7a4-44bdc35159db",
@@ -627,7 +644,7 @@
    "source": [
     "###  DBSCAN Observations:\n",
     "\n",
-    "- DBSCAN detected X dense clusters and Y outliers.\n",
+    "- DBSCAN detected 3 dense clusters and 91 outlier point.\n",
     "- Compared to KMeans, it is more robust to noise and non-spherical clusters.\n",
     "- However, choosing the right `eps` and `min_samples` is critical and may need domain tuning.\n",
     "\n",
@@ -652,6 +669,30 @@
     "dbscan_valid = rfm[rfm['DBSCAN_Cluster'] != 1]\n",
     "dbscan_score = silhouette_score(rfm_scaled[rfm['DBSCAN_Cluster'] != 1], dbscan_valid['DBSCAN_Cluster'])\n",
     "print('DBSCAN Silhouette Score (excluding noise):', dbscan_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14abd8da-817c-4bf0-9129-199f325e7d50",
+   "metadata": {},
+   "source": [
+    "### KMeans vs DBSCAN: Clustering Technique Comparison\n",
+    "\n",
+    "In this section, we compare the performance and suitability of KMeans and DBSCAN clustering algorithms on our customer dataset.\n",
+    "\n",
+    "| Feature               | KMeans               | DBSCAN                           |\n",
+    "|-----------------------|----------------------|----------------------------------|\n",
+    "| **Number of Clusters**| Predefined (e.g., 3) | Determined by data density       |\n",
+    "| **Noise Handling**    |  Not handled        |  Yes (label `-1` = noise)       |\n",
+    "| **Assumption on Shape**| Spherical clusters   | Arbitrary shapes                 |\n",
+    "| **Parameters**        | `n_clusters`         | `eps`, `min_samples`             |\n",
+    "| **Silhouette Score**  | Interpretable & High | Lower (if many outliers)         |\n",
+    "| **Best Use Case**     | Customer Segments    | Anomaly or dense group detection |\n",
+    "\n",
+    "- **KMeans** produced well-separated and interpretable clusters useful for marketing segmentation.\n",
+    "- **DBSCAN** helped detect outliers and captured natural density-based structures in data.\n",
+    "\n",
+    ">  We found that **KMeans** works best for our business objective of **customer segmentation**, while DBSCAN provides an additional layer for **outlier and noise detection**.\n"
    ]
   },
   {
@@ -684,30 +725,6 @@
     "plt.suptitle('Cluster Comparison: KMean vs DBSCAN', fontsize=14)\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14abd8da-817c-4bf0-9129-199f325e7d50",
-   "metadata": {},
-   "source": [
-    "### KMeans vs DBSCAN: Clustering Technique Comparison\n",
-    "\n",
-    "In this section, we compare the performance and suitability of KMeans and DBSCAN clustering algorithms on our customer dataset.\n",
-    "\n",
-    "| Feature               | KMeans               | DBSCAN                           |\n",
-    "|-----------------------|----------------------|----------------------------------|\n",
-    "| **Number of Clusters**| Predefined (e.g., 3) | Determined by data density       |\n",
-    "| **Noise Handling**    |  Not handled        |  Yes (label `-1` = noise)       |\n",
-    "| **Assumption on Shape**| Spherical clusters   | Arbitrary shapes                 |\n",
-    "| **Parameters**        | `n_clusters`         | `eps`, `min_samples`             |\n",
-    "| **Silhouette Score**  | Interpretable & High | Lower (if many outliers)         |\n",
-    "| **Best Use Case**     | Customer Segments    | Anomaly or dense group detection |\n",
-    "\n",
-    "- **KMeans** produced well-separated and interpretable clusters useful for marketing segmentation.\n",
-    "- **DBSCAN** helped detect outliers and captured natural density-based structures in data.\n",
-    "\n",
-    ">  We found that **KMeans** works best for our business objective of **customer segmentation**, while DBSCAN provides an additional layer for **outlier and noise detection**.\n"
    ]
   },
   {
