--- a/loan_approval_project/notebooks/01_eda.ipynb
+++ b/loan_approval_project/notebooks/01_eda.ipynb
@@ -725,18 +725,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "id": "6a0b3b7b-f90a-422b-a10d-07e9d21e99b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../data/processed/loan_dataset.csv')"
+    "df.to_csv('../data/processed/loan_dataset.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "621561f7-b26e-497c-b2fe-51b20e328899",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loan_Status\n",
+       "Y    422\n",
+       "N    192\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Loan_Status'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "621561f7-b26e-497c-b2fe-51b20e328899",
+   "id": "cacb29a7-86ee-4eef-a75a-fdbacaabfe6d",
    "metadata": {},
    "outputs": [],
    "source": []
