--- a/loan_approval_project/notebooks/loanapprovalproject.ipynb
+++ b/loan_approval_project/notebooks/loanapprovalproject.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "31e7aea5-25ce-4b8a-8c86-c93bc165bda2",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,7 @@
     "\n",
     "# Model Evaluation\n",
     "from sklearn.metrics import classification_report, confusion_matrix,ConfusionMatrixDisplay, accuracy_score, roc_auc_score, roc_curve\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "\n",
     "sns.set(style = \"whitegrid\")\n",
     "\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3954e71a-f156-47b8-b9c8-e8e08646503f",
    "metadata": {},
    "outputs": [
@@ -208,21 +209,21 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv(\"loandataset.csv\")\n",
+    "df = pd.read_csv(\"../data/raw/loandataset.csv\")\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7637135b-7a59-4b99-ab44-318f40987947",
    "metadata": {},
    "outputs": [
@@ -388,7 +389,7 @@
        "max          1.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "64743c17-0034-410c-8cef-8665ff42dfd9",
    "metadata": {},
    "outputs": [
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8405ec08-46bd-400d-9dcd-c87161f6f1b8",
    "metadata": {},
    "outputs": [
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "68622362-039e-4752-8636-0b8473e08a51",
    "metadata": {},
    "outputs": [
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bda210c0-4f60-4357-b825-bb0e93d76fd9",
    "metadata": {},
    "outputs": [],
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "610ae6e2-fd96-4b17-bdf9-ee7dd3bbb51c",
    "metadata": {},
    "outputs": [],
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "71cc6af5-cd67-44d9-bcfd-a012e086c4ea",
    "metadata": {},
    "outputs": [],
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "20644487-b2db-4e27-8637-8d3048972d2f",
    "metadata": {},
    "outputs": [],
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "0e36ebe9-c22b-4b82-97e0-64848364456b",
    "metadata": {},
    "outputs": [
@@ -617,6 +618,9 @@
      "output_type": "stream",
      "text": [
       "Random Forest - Accuracy: 0.8211\n",
+      "Preicison:  0.8461538461538461\n",
+      "Recall:  0.9058823529411765\n",
+      "F1 Score:  0.875\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.75      0.63      0.69        38\n",
@@ -627,6 +631,9 @@
       "weighted avg       0.82      0.82      0.82       123\n",
       "\n",
       "Decision Tree - Accuracy: 0.7398\n",
+      "Preicison:  0.8354430379746836\n",
+      "Recall:  0.7764705882352941\n",
+      "F1 Score:  0.8048780487804879\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.57      0.66      0.61        38\n",
@@ -637,6 +644,9 @@
       "weighted avg       0.75      0.74      0.74       123\n",
       "\n",
       "Logistic Regression - Accuracy: 0.8537\n",
+      "Preicison:  0.8383838383838383\n",
+      "Recall:  0.9764705882352941\n",
+      "F1 Score:  0.9021739130434783\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.92      0.58      0.71        38\n",
@@ -647,6 +657,9 @@
       "weighted avg       0.86      0.85      0.84       123\n",
       "\n",
       "KNN - Accuracy: 0.6504\n",
+      "Preicison:  0.71875\n",
+      "Recall:  0.8117647058823529\n",
+      "F1 Score:  0.7624309392265194\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.41      0.29      0.34        38\n",
@@ -657,6 +670,9 @@
       "weighted avg       0.62      0.65      0.63       123\n",
       "\n",
       "SVM - Accuracy: 0.6911\n",
+      "Preicison:  0.6910569105691057\n",
+      "Recall:  1.0\n",
+      "F1 Score:  0.8173076923076923\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.00      0.00      0.00        38\n",
@@ -667,6 +683,9 @@
       "weighted avg       0.48      0.69      0.56       123\n",
       "\n",
       "XGBoost - Accuracy: 0.7886\n",
+      "Preicison:  0.8390804597701149\n",
+      "Recall:  0.8588235294117647\n",
+      "F1 Score:  0.8488372093023255\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.67      0.63      0.65        38\n",
@@ -698,6 +717,9 @@
     "\n",
     "    acc = accuracy_score(y_test, y_pred)\n",
     "    print(f'{name} - Accuracy: {acc:.4f}')\n",
+    "    print('Preicison: ', precision_score(y_test, y_pred))\n",
+    "    print('Recall: ', recall_score(y_test, y_pred))\n",
+    "    print('F1 Score: ', f1_score(y_test, y_pred))\n",
     "    print(classification_report(y_test, y_pred))\n",
     "\n",
     "    results[name] = acc\n",
