--- a/loan_approval_project/notebooks/02_preprocessing.ipynb
+++ b/loan_approval_project/notebooks/02_preprocessing.ipynb
@@ -5,7 +5,7 @@
    "id": "9b11fe05-4646-424e-8822-3a9047beaedc",
    "metadata": {},
    "source": [
-    "## Data Preprocessing for Loan Approval Prediction\n",
+    "## Loan Approval Prediction - Data Preprocessing\n",
     "This notebook performs feature engineering, encoding, scaling, and splitting of data to prepare it for machine learning models."
    ]
   },
@@ -915,8 +915,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "7c66d8da-5c77-49ea-9193-751fb54bb8de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.to_csv('../data/processed/train.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1e1da969-7033-4775-afaa-6e01c813be13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.to_csv('../data/processed/train_y.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cff1215-bce7-4102-836f-1158a8969a73",
    "metadata": {},
    "outputs": [],
    "source": []
