--- a/loan_approval_project/notebooks/03_modeling.ipynb
+++ b/loan_approval_project/notebooks/03_modeling.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 332,
    "id": "f599982e-645a-4c67-8762-5d5d6a9bec85",
    "metadata": {},
    "outputs": [
@@ -789,13 +789,13 @@
        "['../models/optimal_threshold.pkl']"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(best_xgb, '../models/best_model.pkl')\n",
+    "joblib.dump(best_model, '../models/best_model.pkl')\n",
     "print('Best model saved successfully!')\n",
     "# Save the optimal threshold as a float or in a dictionary\n",
     "joblib.dump(optimal_threshold, '../models/optimal_threshold.pkl')"
